# MasterProject

./: .gitignore  README.txt
Code/Test/: Adaptive.cpp  CMakeLists.txt  LorenzPlotTrajectories.cpp  MCMCconvFix.cpp  Metropolis.cpp  MetropolisBruss.cpp  MetropolisConv.cpp  MetropolisDet.cpp  batchConfInterval.cpp  gaussMetropolis.cpp  generateRefSol.cpp  impMetropolisConv.cpp  invMeasure.cpp  jacTest.cpp  likelihoodEstimator.cpp  mcmcBruss.cpp  mcmcParamTest.cpp  mcmcTools.cpp  mcmcTools.hpp  mlMetropolis.cpp  mlmcTest.cpp  nonZeroVar.cpp  plainMH.cpp  plainMHConv.cpp  plotGaussTrajectories.cpp  plotTrajectories.cpp  problems.cpp  problems.hpp  sMetropolis.cpp  sigmaEst.cpp  smlMetropolis.cpp  smlmcTest.cpp  testBackEul.cpp  testBinary.cpp  testInverse.cpp  testMCMCconvergence.cpp  testMH.cpp  testMHconv.cpp  testMLMC.cpp  testMerge.cpp  (+9 more)
RandomODE_MasterProject/: CMakeLists.txt
RandomODE_MasterProject/RKRandomStep/: CMakeLists.txt
RandomODE_MasterProject/RKSolver/: CMakeLists.txt  Problems.cpp  RungeKuttaSolver.hpp  Structures.hpp  Tools.cpp  Tools.hpp
RandomODE_MasterProject/Test/: CMakeLists.txt  GenerateTrajectories.cpp  StrongConvergence.cpp  WeakConvergence.cpp
RandomODE_MasterProject/eigen/: COPYING.GPL  COPYING.LGPL
RandomODE_MasterProject/matlabScripts/: PlotConvergence.m  PlotTrajectories.m  output.txt  outputStrong.txt  outputWeak.txt
RandomPDE/: CMakeLists.txt
RandomPDE/FirstTests/: CMakeLists.txt  PlotPoisson.cpp  PlotPoissonDirOne.cpp  Poisson1D.cpp  RandomMatrix.cpp  RandomMatrixPlot.cpp
RandomPDE/InverseODE/: CMakeLists.txt  GenerateObservations.cpp  ODE_InfInverseProblem.cpp  ODE_InverseProblem.cpp  ODE_InverseProblemFixed.cpp  ODE_InverseProblemIC.cpp  ODE_InverseProblemICErrEst.cpp  ODE_SMC.cpp  ReadObservations.cpp  ReadObservations.hpp  TestKL.cpp
RandomPDE/InversePDE/: CMakeLists.txt  PDE_InverseProblem.cpp  PDE_InverseProblem_FinDim.cpp  PDE_InverseProblem_InfDim.cpp
RandomPDE/MCMCLib/: CMakeLists.txt  FEMPosterior.cpp  FEMPosterior.hpp  FEMPosteriorFin.cpp  FEMPosteriorFin.hpp  FEMProbPosterior.cpp  FEMProbPosterior.hpp  FEMProbPosteriorFin.cpp  FEMProbPosteriorFin.hpp  FEMProbPosteriorMulti.cpp  FEMProbPosteriorMulti.hpp  KarhunenLoeve.cpp  KarhunenLoeve.hpp  MCMC.cpp  MCMC.hpp  Posterior.hpp  RAM.cpp  RAM.hpp  RKAddNoisePosteriorIC.cpp  RKAddNoisePosteriorIC.hpp  RKEEPosteriorIC.cpp  RKEEPosteriorIC.hpp  RKPosterior.cpp  RKPosterior.hpp  RKPosteriorIC.cpp  RKPosteriorIC.hpp  RKProbPosterior.cpp  RKProbPosterior.hpp  RKProbPosteriorFixed.cpp  RKProbPosteriorFixed.hpp  RKProbPosteriorIC.cpp  RKProbPosteriorIC.hpp
RandomPDE/OneDimElliptic/: CMakeLists.txt  OneDimEllipticSolver.cpp  OneDimEllipticSolver.hpp  OneDimMesh.cpp
RandomPDE/PythonScripts/: GenObs.py  HellConvergence.py  InvariantDensity.py  LauncherDetProb.py  LauncherHam.py  LauncherMSC.py  LauncherMSE.py  LauncherODE.py  LauncherODEEE.py  LauncherODEFixed.py  LauncherOxPerox.py  LauncherPDEInverseFin.py  LauncherPDEInverseInf.py  LauncherSMC.py  LauncherWeak.py
RandomPDE/RKRandomStep/: AdditiveNoise.cpp  AdditiveNoise.hpp  CMakeLists.txt  RandomCalibration.cpp  RandomCalibration.hpp  RandomTimeStep.cpp  RandomTimeStep.hpp
RandomPDE/RKSolver/: Problems.cpp  RungeKuttaSolver.cpp  RungeKuttaSolver.hpp  Structures.cpp  Structures.hpp  Tools.cpp  Tools.hpp
RandomPDE/RTSRK-Test/: Adaptivity.cpp  AdaptivityDeterministic.cpp  CMakeLists.txt  DistNumProb.cpp  EmbVsProbErrEst.cpp  GenerateTrajectory.cpp  Hamiltonian.cpp  Hamiltonian2.cpp  InvariantDensity.cpp  LorenzTestReview.cpp  MSE.cpp  MSE_M.cpp  MeanSquareConv.cpp  MethodCalibration.cpp  OneStepVariance.cpp  OxPeroxReaction.cpp  WeakConv.cpp
RandomPDE/SMCLib/: CMakeLists.txt  SMC.cpp  SMC.hpp  SMCDet.cpp  SMCDet.hpp
RandomPDE/TestPDE/: CMakeLists.txt  DebugTest.cpp
RandomPDE/getpot-c++/: GetPot
RandomPDE/matlabPlots/: Cazzeggio.m  FDSolution.m  InverseDistribution.m  plotSolutions.m  plotStrongWeakConv.m
RungeKutta/: CMakeLists.txt
RungeKutta/MCMCLib/: CMakeLists.txt  MCMC.cpp  MCMC.hpp
RungeKutta/MCMCTest/: CMakeLists.txt  testMCMC.cpp
RungeKutta/PythonScripts/: LauncherEmb.py  LauncherMeasure.py  LauncherProb.py
RungeKutta/RKRandomStep/: AdditiveNoise.cpp  AdditiveNoise.hpp  RandomTimeStep.cpp  RandomTimeStep.hpp
RungeKutta/RKSolver/: Problems.cpp  RungeKuttaSolver.cpp  RungeKuttaSolver.hpp  Structures.cpp  Structures.hpp  Tools.hpp
RungeKutta/SubTests/: BasicTest.cpp  CMakeLists.txt
RungeKutta/Subdivision/: Basics.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Subdivision.cpp  Subdivision.hpp
RungeKutta/Test/: CMakeLists.txt  GenerateObservations.cpp  GenerateObservationsHeat.cpp  GenerateTrajectories.cpp  HamiltonianError.cpp  HeatInitCond.cpp  InvariantCons.cpp  InvariantExplTime.cpp  InvariantMeasure.cpp  LorenzVariableIC.cpp  MonteCarloTest.cpp  ODEParam.cpp  OdeInverse.cpp  RandStepVsAddNoise.cpp  RandomSolutions.cpp  RandomTest.cpp  ReferenceSolution.cpp  SpaceMeans.cpp  StrongConvergenceAdd.cpp  StrongConvergenceOneStep.cpp  StrongConvergenceTest.cpp  TimeMeans.cpp  WeakConvergenceAdd.cpp  WeakConvergenceTest.cpp
RungeKutta/Utilities/: CMakeLists.txt  UtilitiesGG.cpp  UtilitiesGG.hpp
RungeKutta/matlabPlots/: ConvergenceInvariant.m  GeneratePlotFitznagMCMC.m  HenonHam.m  ICLorenz.m  KernelVsBoxes.m  LorenzBoxesDens.fig  MCConvergence.m  PlotErrorsVarH.m  PlotFitznagCycle.m  PlotRandStepVsAddNoise.m  PlotSolutions.m  PlotThetaT.m  RandVsAddKernelDens.m  SpaceVsTime.m  StrongConvergence.m  Test.m  TestModifEq.m  WeakConvergence.m  computeDensity.m  convergenceDensity.m  coordToInd.m  densDiff.m  drawCube.m  getGridCenters.m~  logNormalSteps.m  normalKernelDensity.m  plotBoxCollection.m  plotBoxCollectionColor.m  plotDensity.m  plotLongKepler.m  plotTestMCMC.m  reshapeTransMatrix.m  rk4.m  testToda.m
SDECode/: CMakeLists.txt
SDECode/InverseProblemsTests/: CMakeLists.txt  Filter.cpp  Filter.hpp  FilterTest.cpp  TestHomog.cpp  computeEstimators.cpp  computeEstimators.hpp  computeHomogeneous.cpp  driftBayesian.cpp  generateObservations.cpp  generateObservations.hpp  testHomog.cpp  testModErr.cpp  (+12 more)
(+1603 files in other folders)
