cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -std=c++11 -Wall")
set(CMAKE_BUILD_TYPE Release)
project(randomPDE)

include_directories(${CMAKE_SOURCE_DIR}/eigen)
include_directories(${CMAKE_SOURCE_DIR}/getpot-c++)

add_subdirectory(MCMCLib)
add_subdirectory(OneDimElliptic)
add_subdirectory(TestPDE)
add_subdirectory(InversePDE)
add_subdirectory(RKSolver)
add_subdirectory(RKRandomStep)
add_subdirectory(InverseODE)
add_subdirectory(SMCLib)
add_subdirectory(RTSRK-Test)
