cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -std=c++11 -Wall")
set(CMAKE_BUILD_TYPE Release)
project(rungekutta)

include_directories(${CMAKE_SOURCE_DIR}/eigen)

add_subdirectory(RKSolver)
add_subdirectory(Test)
add_subdirectory(RKRandomStep)
add_subdirectory(Utilities)
add_subdirectory(Subdivision)
add_subdirectory(SubTests)
add_subdirectory(MCMCLib)
add_subdirectory(MCMCTest)
